Added code and documentation for experiments

--- a/data-development-code/0-extract_sample_from_MaCoCu-Genre.ipynb
+++ b/data-development-code/0-extract_sample_from_MaCoCu-Genre.ipynb
@@ -12,7 +12,6 @@
    "metadata": {},
    "source": [
     "I took the CLASSLA/MaCoCu corpora from `http://hdl.handle.net/11356/1969` that I previously prepared as JSONL files for the automatic genre annotation. The preparation of texts included the following additional post-processing steps:\n",
-    "- removing all texts that were shorter than 75 words\n",
     "- truncating texts to the first 512 words of each text (because the max_sequence_length that model can take is 512 tokens)\n",
     "- removal of all texts that are in multiple languages - only texts that are only in the target language are kept"
    ]
@@ -33,9 +32,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define dataset paths\n",
+    "# Define paths to the MaCoCu-Genre datasets - an example\n",
     "dataset_paths = {\n",
-    "\t\"hr\": \"path_example\"\n",
+    "\t\"el\": \"path_example\"\n",
     "}"
    ]
   },
@@ -345,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +414,7 @@
    ],
    "source": [
     "# Extract a sample on which we will first run the automatic prediction and mark it\n",
-    "prediction_sample = big_sample.sample(n=5000)\n",
+    "prediction_sample = big_sample.sample(n=5250)\n",
     "\n",
     "print(prediction_sample.shape)\n",
     "\n",
@@ -583,35 +582,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "prediction_sample\n",
-       "no     5000\n",
-       "yes    5000\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "big_sample.prediction_sample.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the dataset\n",
-    "big_sample.to_json(\"datasets/MaCoCu-sample/MaCoCu-10.000-sample-{}.jsonl\".format(lang), orient=\"records\", lines=True)"
+    "big_sample.to_json(\"datasets/MaCoCu-sample/MaCoCu-training-sample-{}.jsonl\".format(lang), orient=\"records\", lines=True)"
    ]
   }
  ],
