--- a/data-development-code/2-develop-balanced-test-samples.ipynb
+++ b/data-development-code/2-develop-balanced-test-samples.ipynb
@@ -6,22 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %pip install pandas\n",
-    "# %pip install scikit-learn\n",
-    "# %pip install openai"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import pandas as pd\n",
-    "import json\n",
-    "import numpy as np\n",
-    "from time import sleep\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from openai import OpenAI\n",
     "from tqdm import tqdm\n",
     "client = OpenAI(api_key=open('key.txt').read())"
@@ -40,11 +25,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Open jsonl file, annotated with `data-development-code/annotate-with-gpt4o.ipynb`\n",
+    "# Open jsonl file, annotated with `data-development-code/1-annotate-with-gpt4o-and-split-training-samples.ipynb`\n",
     "\n",
     "lang = \"ca\"\n",
     "\n",
-    "df = pd.read_json(\"file_path-{}.jsonl\".format(lang), orient=\"records\", lines=True)\n",
+    "# Define file path\n",
+    "file_path = \"\"\n",
+    "\n",
+    "df = pd.read_json(\"{}\".format(file_path), orient=\"records\", lines=True)\n",
     "\n",
     "\n",
     "print(df.shape)\n",
@@ -291,7 +279,8 @@
    "outputs": [],
    "source": [
     "# Save the sample\n",
-    "final_sample.to_csv(\"file_name.csv\".format(lang))"
+    "\n",
+    "final_sample.to_csv(\"{}-for-annotation.csv\".format(file_path))"
    ]
   },
   {
@@ -686,7 +675,7 @@
    "outputs": [],
    "source": [
     "# Save the sample\n",
-    "second_batch.to_csv(\"file_name2.csv\".format(lang))"
+    "second_batch.to_csv(\"{}-for-additional-annotation.csv\".format(file_path))"
    ]
   }
  ],
