--- a/data-development-code/1-annotate-with-gpt4o-and-split-training-samples.ipynb
+++ b/data-development-code/1-annotate-with-gpt4o-and-split-training-samples.ipynb
@@ -127,7 +127,11 @@
     "\n",
     "lang = \"el\"\n",
     "\n",
-    "df_entire = pd.read_json(\"MaCoCu-sample/MaCoCu-10.000-sample-{}.jsonl\".format(lang), orient=\"records\", lines=True)\n",
+    "# Define path to the sample, prepared in data-development-code/0-extract_sample_from_MaCoCu-Genre.ipynb\n",
+    "\n",
+    "path = \"\"\n",
+    "\n",
+    "df_entire = pd.read_json(\"{}\".format(path), orient=\"records\", lines=True)\n",
     "\n",
     "print(df_entire.shape)\n",
     "\n",
@@ -138,86 +142,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(5000, 4)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>document_id</th>\n",
-       "      <th>text</th>\n",
-       "      <th>genre</th>\n",
-       "      <th>prediction_sample</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>macocu.el.16270178</td>\n",
-       "      <td>Ο Δήμος Ναυπακτίας για την επιστολή της Ομοσπο...</td>\n",
-       "      <td>News</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>macocu.el.16216576</td>\n",
-       "      <td>\"Λες να το δούμε κι αυτό;\", τον ρώτησε η Μάρα....</td>\n",
-       "      <td>News</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>macocu.el.12003438</td>\n",
-       "      <td>\"Τεσσάρα\" η ΑΕΛ U-20 στη Βέροια \\n\\nΝίκη με τε...</td>\n",
-       "      <td>News</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           document_id                                               text  \\\n",
-       "5   macocu.el.16270178  Ο Δήμος Ναυπακτίας για την επιστολή της Ομοσπο...   \n",
-       "10  macocu.el.16216576  \"Λες να το δούμε κι αυτό;\", τον ρώτησε η Μάρα....   \n",
-       "11  macocu.el.12003438  \"Τεσσάρα\" η ΑΕΛ U-20 στη Βέροια \\n\\nΝίκη με τε...   \n",
-       "\n",
-       "   genre prediction_sample  \n",
-       "5   News               yes  \n",
-       "10  News               yes  \n",
-       "11  News               yes  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Take only the batch of 5000 instances (later, repeat the process by taking additional 250 instances for development split)\n",
+    "# Take the batch of 5250 instances\n",
     "\n",
     "df = df_entire[df_entire[\"prediction_sample\"] == \"yes\"]\n",
     "\n",
@@ -228,27 +155,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Ο Δήμος Ναυπακτίας για την επιστολή της Ομοσπονδίας Επαγγελματικών Βιοτεχνικών &amp; Εμπορικών Σωματείων Ναυπακτίας Δωρίδας στο δημοτικό συμβούλιο \\n\\nΔυτικά FM \\n\\nΗ επιστολή της Ομοσπονδίας Επαγγελματικών Βιοτεχνικών &amp; Εμπορικών Σωματείων Ναυπακτίας και Δωρίδας με ημερομηνία 16-05-2017, σχετικά με το κυκλοφοριακό πρόβλημα της πόλης, πρωτοκολλήθηκε στο Δήμο την ίδια ημέρα. Η ημερήσια διάταξη του Δημοτικού Συμβουλίου της 17ης-5-2017, εκδόθηκε στις 12-05-2017 και ως εκ τούτου δεν ήταν δυνατόν να περιλαμβάνεται σ ́αυτήν το συγκεκριμένο θέμα. Ο Πρόεδρος της... \\n\\n', '\"Λες να το δούμε κι αυτό;\", τον ρώτησε η Μάρα.... \"Τα έχουμε δει όλα, γιατί να μην το δούμε κι αυτό\", απάντησε ο Χατζηνικολάου, ο οποίος από την ανάγνωση του κειμένου της προγραμματικής συμφωνίας Σαμαρά – Βενιζέλου έβγαλε το συμπέρασμα, πως Νέα Δημοκρατία και ΠΑΣΟΚ, έγιναν ένα. \\n\\nΚατά τον Χατζηνικολάου, μάλλον πάμε σε εκλογές με \"Πασοκονεοδημοκρατία\". Υπογράμμισε μάλιστα, πως σ\\' αυτήν τη συμφωνία μεταξύ Σαμαρά και Βενιζέλου, φαίνεται πως το ΠΑΣΟΚ κάνει ένα κλικ δεξιότερα και συγκλίνει προς τη ΝΔ. \\n\\nΚανονική συνιστώσα, όπως κατάντησε το κόμμα του Ανδρέα Παπανδρέου, ο εξουσιομανής και μοιραίος άνθρωπος για το ΠΑΣΟΚ, ο Βενιζέλος. \\n\\n']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "5000"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "texts = df[\"text\"].to_list()\n",
     "print(texts[:2])\n",
@@ -404,12 +313,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the dataset\n",
-    "df.to_json(\"/home/tajak/IPTC-News-Topic-Categorization/datasets/MaCoCu-sample/MaCoCu-5.000-sample-{}-predicted.jsonl\".format(lang), orient=\"records\", lines=True)"
+    "df.to_json(\"/datasets/MaCoCu-5.000-sample-{}-predicted.jsonl\".format(lang), orient=\"records\", lines=True)"
    ]
   },
   {
@@ -595,7 +504,7 @@
    ],
    "source": [
     "# Open the main dataset\n",
-    "main_df = pd.read_json(\"MaCoCu-sample/MaCoCu-main-multilingual-predicted-dataset.jsonl\", orient=\"records\", lines=True)\n",
+    "main_df = pd.read_json(\"MaCoCu-main-multilingual-predicted-dataset.jsonl\", orient=\"records\", lines=True)\n",
     "\n",
     "print(main_df.shape)\n",
     "\n",
@@ -722,7 +631,7 @@
    "outputs": [],
    "source": [
     "# Save the dataset\n",
-    "main_df.to_json(\"MaCoCu-sample/MaCoCu-main-multilingual-predicted-dataset.jsonl\", orient=\"records\", lines=True)"
+    "main_df.to_json(\"MaCoCu-main-multilingual-predicted-dataset.jsonl\", orient=\"records\", lines=True)"
    ]
   },
   {
@@ -741,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +733,7 @@
    ],
    "source": [
     "# Open the dataset\n",
-    "df = pd.read_json(\"/home/tajak/IPTC-News-Topic-Categorization/datasets/MaCoCu-sample/MaCoCu-main-multilingual-predicted-dataset.jsonl\", orient=\"records\", lines=True)\n",
+    "df = pd.read_json(\"MaCoCu-main-multilingual-predicted-dataset.jsonl\", orient=\"records\", lines=True)\n",
     "\n",
     "print(df.shape)\n",
     "\n",
@@ -1339,12 +1248,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the dataset\n",
-    "df.to_json(\"/home/tajak/IPTC-News-Topic-Categorization/datasets/MaCoCu-sample/MaCoCu-main-multilingual-predicted-dataset.jsonl\", orient=\"records\", lines=True)"
+    "df.to_json(\"MaCoCu-main-multilingual-predicted-dataset.jsonl\", orient=\"records\", lines=True)"
    ]
   },
   {
@@ -1358,27 +1267,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: CUDA_DEVICE_ORDER=PCI_BUS_ID\n",
-      "env: CUDA_VISIBLE_DEVICES=2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import json\n",
-    "import numpy as np\n",
-    "import tarfile\n",
-    "import os\n",
-    "from collections import Counter\n",
-    "import matplotlib.pyplot as plt\n",
-    "from time import sleep\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from tqdm import tqdm"
+    "import numpy as np"
    ]
   },
   {
@@ -2015,7 +1907,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example of creating a split based on a certain size\n",
+    "# Example of creating a split based on a certain size - do this for each size. To create various samples of the same size, change the random state number \n",
     "random_state = 73\n",
     "\n",
     "for lang in [\"hr\", \"sl\", \"ca\", \"el\"]:\n",
